--- a/app/views/courses/courseDetails.scala.html
+++ b/app/views/courses/courseDetails.scala.html
@@ -6,169 +6,173 @@
 
 @main(currentUser, role, "Kurs", false){
 	<meta charset="UTF-8">
-	<div class="container col-md-offset-2 col-md-8">
+	<div class="container">
 		@helper.form(action = routes.Courses.saveCourse(courseId),  'enctype -> "multipart/form-data") {
 			<fieldset>
 				<legend>
 					<div class="container row">
-						<div class="col-md-5">
-							<h1>@courseForm("name").valueOr("Nowy kurs")  @if(courseForm("name").value() == ""){Kurs bez nazwy !}</h1>
-						</div>
-						<div class="col-md-6">
-					   		<span class="pull-right">
-					    		<a rel="tooltip" title="Powrót bez zapisywania zamian" class="btn btn-danger" href="@routes.Courses.getCourses()">Powrót</a> 
-								<input rel="tooltip" title="Zapisz zmiany w kursie" type="submit" class="btn btn-primary" value="Zapisz">
+						<div class="col-md-12">
+							<h1>@courseForm("name").valueOr("Nowy kurs")  @if(courseForm("name").value() == ""){Kurs bez nazwy !}
+								<span class="pull-right">
+						    		<a rel="tooltip" title="Powrót bez zapisywania zamian" class="btn btn-warning" href="@routes.Courses.getCourses()">Powrót</a> 
+									<input rel="tooltip" title="Zapisz zmiany w kursie" type="submit" class="btn btn-primary" value="Zapisz">
 					    	</span>
+							</h1>
 						</div>
 					</div>
 				</legend>	
-				<div class="col-md-5 panel panel-default">
-					<div class="col-md-offset-0">
+				<div class="col-md-6 ">
+					<div class="col-md-12 panel panel-default container">
 						<h3 align="center">Dane kursu</h3>
 						<hr>
 						@helper.inputText(courseForm("name"), '_label -> "Nazwa kursu",  'class -> "form-control", 'placeholder -> "Wprowadź nazwę kursu")		
-						@helper.textarea(courseForm("description"), '_label -> "Opis",  'class -> "form-control", 'placeholder -> "Informacje o kursie", 'rows -> 10)
+						@helper.textarea(courseForm("description"), '_label -> "Opis",  'class -> "form-control", 'placeholder -> "Informacje o kursie", 'rows -> 10, 'style -> "resize: none;")
 						<br>	
 					</div>
 				</div>
 				<!-- The panel with the information about people responsible for the course -->	
-				<div class="col-md-6 col-md-offset-1  panel panel-default">			
-					<h3 align="center">Osoby związane z kursem</h3>
-					<!-- Part for the course manager -->	
-					<hr>	
-						<div class="clearfix col-md-offset-1 row center" id="manager_id_field">
-							<div class="col-md-11">
-								<!-- <span class="pull-left"> -->
-									<label for="manager_id">Kierownik kursu :  </label>
-								    <b id="manager_name">
-									@if(course != null){
-										@if((course.manager_id != null) && (course.manager_id != "")){
-											@for(user <- users){
-												@if(user._id == course.manager_id){
-													@user.toString()
-												}
-											}
-										} else{
-											Brak!
-										}
-									}
-								   	</b>
-								   	<span class="pull-right">
-									<a class="link" id="courseManagerLink" data-toggle="modal" data-target="#chooseModal">
-								    @if((course.manager_id == null) || (course.manager_id == "")){		
-								    	<i rel="tooltip" title="Dodaj/Zmień kierownika kursu" id="add_change_icon" class="glyphicon glyphicon-plus"></i>								    		
-								    } else{
-								    	<i rel="tooltip" title="Zmień kierownika kursu"  class="glyphicon glyphicon-edit"></i>
-								    }
-								    </a>								    	
-							    </span>
-							    <!-- </span> -->
-							</div>	
-							<input hidden id="manager_id" name="manager_id" value="@course.manager_id"></input> 
-						</div>
-						<hr>					
-						<!-- Part for the instructors involved with the course -->
-						<div class="clearfix col-md-offset-1 col-md-10" id="instructors_ids_field">
-							@if(course != null){
-								@if((course.instructors_ids == null) || (course.instructors_ids.size() == 0)){
-									<b>Brak instruktorów przydzielonych do kursu!</b>
-								} else{
-									<b>Lista instruktorów związanych z kursem :<br> </b>
-									@for(instructor <- course.instructors_ids) {
-										@for(user <- users){
-											@if(user._id == instructor){
-												@if(i != 0) {, }
-													@user.toString()
-													@{i = i+1}
-												} 
-											}	  
-										}
-									}
-								}								    	
-						</div>
-						<br>
-						<br>
-						<hr>
-						<div class="col-md-offset-1 col-md-10 row center">
-							<table id="membersTab" class="table">
-								<thead>
-									<th data-align="center">Uczestnicy kursu</th>
-							        <th data-align="center">Usuń <span class="pull-right"><a id="addCourseMember" data-toggle="modal" data-target="#memebersModal" rel="tooltip" title="Dodaj nowego kursanta"><i class="glyphicon glyphicon-plus"></i></a></span></th>
-								</thead>
-								<tbody>
-									@for(user <- users){
-										@if(course.members_ids != null){
-											@if(course.members_ids.get(0).contains(user._id)){
-												<tr id="row@user._id">
-													<td>@user.toString()</td>
-													<td>
-														<a rel="tooltip" title="Usuń kursanta" value="@user._id" name="deleteMember">
-															<i class="glyphicon glyphicon-remove"></i>
-														</a>	
-													</td>
-												</tr>
-											}
-										}		
-									}
-									
-								</tbody>
-							</table>
-							<input hidden id="members_ids" name="members_ids" value="@if(course.members_ids != null){@course.members_ids.get(0)}"></input>
-						</div>
-						<br>
-						<br>
-						<br>													
-				</div>
-				<div class="col-md-12 panel panel-default">
-					<h3 align="center">Spotkania grup kursowych <span class="pull-right">
-					<input rel="tooltip" title="Nowe spotkanie" type="submit" class="btn btn-primary" value="Dodaj" id="addMeeting"></input></span> </h3>
-					<br>
-					@if(course != null){
-						@if(course.meetingHistory != null){
-							<table class="table  table-striped" data-url="/courses">
-								<thead>
-									<tr>
-							            <th data-field="group" data-align="center">Grupa</th>
-							            <th data-field="instructor" data-align="center">Instruktor</th>
-							            <th data-field="date" data-align="center">Data</th>
-							            <th data-field="place" data-align="center">Miejsce</th>
-							            <th data-field="subject" data-align="center">Temat</th>
-							            <th data-align="center">Zmień / Usuń</th>  
-									</tr>
-								</thead>
-								<tbody>
-									@for(meeting <- course.meetingHistory){
-										<tr>
-											<td>@meeting.group</td>
-											<td>@for(user <- users){
-													@if(user._id == meeting.instructor_id){
+				<div class="col-md-6">
+					<div class="col-md-12 panel panel-default container">			
+						<h3 align="center">Osoby związane z kursem</h3>
+						<!-- Part for the course manager -->	
+						<hr>	
+							<div class="clearfix col-md-offset-1 row center" id="manager_id_field">
+								<div class="col-md-11">
+									<!-- <span class="pull-left"> -->
+										<label for="manager_id">Kierownik kursu :  </label>
+									    <b id="manager_name">
+										@if(course != null){
+											@if((course.manager_id != null) && (course.manager_id != "")){
+												@for(user <- users){
+													@if(user._id == course.manager_id){
 														@user.toString()
 													}
+												}
+											} else{
+												Brak!
 											}
-											</td>
-											<td>@meeting.date</td>
-											<td>@meeting.place</td>
-											<td>@meeting.subject</td>
-											<td>
-												<span class="col-md-offset-1">	
-													<a>	
-														<i rel="tooltip" title="Edytuj dane spotkania" name="editMeeting" data-meeting-to-edit="@meeting._id" class="glyphicon glyphicon-pencil"></i>
-													</a>
-					 							</span>
-											 	<span class="col-md-offset-2">
-											 		<a data-toggle="modal" data-target="#confirmDeleteMeetingModal" data-meeting-id="@meeting._id" data-meeting-name="Grupa @meeting.group Spotkanie : @meeting.subject">
-														<i rel="tooltip" title="Usuń spotkanie" class="glyphicon glyphicon-remove"></i>
-													</a>
-											 	</span>
-											 </td>
+										}
+									   	</b>
+									   	<span class="pull-right">
+										<a class="link" id="courseManagerLink" data-toggle="modal" data-target="#chooseModal">
+									    @if((course.manager_id == null) || (course.manager_id == "")){		
+									    	<i rel="tooltip" title="Dodaj/Zmień kierownika kursu" id="add_change_icon" class="glyphicon glyphicon-plus"></i>								    		
+									    } else{
+									    	<i rel="tooltip" title="Zmień kierownika kursu"  class="glyphicon glyphicon-edit"></i>
+									    }
+									    </a>								    	
+								    </span>
+								    <!-- </span> -->
+								</div>	
+								<input hidden id="manager_id" name="manager_id" value="@course.manager_id"></input> 
+							</div>
+							<hr>					
+							<!-- Part for the instructors involved with the course -->
+							<div class="clearfix col-md-offset-1 col-md-10" id="instructors_ids_field">
+								@if(course != null){
+									@if((course.instructors_ids == null) || (course.instructors_ids.size() == 0)){
+										<b>Brak instruktorów przydzielonych do kursu!</b>
+									} else{
+										<b>Lista instruktorów związanych z kursem :<br> </b>
+										@for(instructor <- course.instructors_ids) {
+											@for(user <- users){
+												@if(user._id == instructor){
+													@if(i != 0) {, }
+														@user.toString()
+														@{i = i+1}
+													} 
+												}	  
+											}
+										}
+									}								    	
+							</div>
+							<br>
+							<br>
+							<hr>
+							<div class="col-md-offset-1 col-md-10 row center">
+								<table id="membersTab" class="table">
+									<thead>
+										<th data-align="center">Uczestnicy kursu</th>
+								        <th data-align="center">Usuń <span class="pull-right"><a id="addCourseMember" data-toggle="modal" data-target="#memebersModal" rel="tooltip" title="Dodaj nowego kursanta"><i class="glyphicon glyphicon-plus"></i></a></span></th>
+									</thead>
+									<tbody>
+										@for(user <- users){
+											@if(course.members_ids != null){
+												@if(course.members_ids.get(0).contains(user._id)){
+													<tr id="row@user._id">
+														<td>@user.toString()</td>
+														<td>
+															<a rel="tooltip" title="Usuń kursanta" value="@user._id" name="deleteMember">
+																<i class="glyphicon glyphicon-remove"></i>
+															</a>	
+														</td>
+													</tr>
+												}
+											}		
+										}
+										
+									</tbody>
+								</table>
+								<input hidden id="members_ids" name="members_ids" value="@if(course.members_ids != null){@course.members_ids.get(0)}"></input>
+							</div>
+							<br>
+							<br>
+							<br>
+					</div>													
+				</div>
+				<div class="col-md-12">
+					<div class="col-md-12 panel panel-default container">
+						<h3 align="center">Spotkania grup kursowych <span class="pull-right">
+						<input rel="tooltip" title="Nowe spotkanie" type="submit" class="btn btn-primary" value="Dodaj" id="addMeeting"></input></span> </h3>
+						<br>
+						@if(course != null){
+							@if(course.meetingHistory != null){
+								<table class="table  table-striped" data-url="/courses">
+									<thead>
+										<tr>
+								            <th data-field="group" data-align="center">Grupa</th>
+								            <th data-field="instructor" data-align="center">Instruktor</th>
+								            <th data-field="date" data-align="center">Data</th>
+								            <th data-field="place" data-align="center">Miejsce</th>
+								            <th data-field="subject" data-align="center">Temat</th>
+								            <th data-align="center">Zmień / Usuń</th>  
 										</tr>
-									}
-								</tbody>
-							</table>
-						}else{ 
-							<h4>Brak zaplanowanych wydarzeń!</h4>
+									</thead>
+									<tbody>
+										@for(meeting <- course.meetingHistory){
+											<tr>
+												<td>@meeting.group</td>
+												<td>@for(user <- users){
+														@if(user._id == meeting.instructor_id){
+															@user.toString()
+														}
+												}
+												</td>
+												<td>@meeting.date</td>
+												<td>@meeting.place</td>
+												<td>@meeting.subject</td>
+												<td>
+													<span class="col-md-offset-1">	
+														<a>	
+															<i rel="tooltip" title="Edytuj dane spotkania" name="editMeeting" data-meeting-to-edit="@meeting._id" class="glyphicon glyphicon-pencil"></i>
+														</a>
+						 							</span>
+												 	<span class="col-md-offset-2">
+												 		<a data-toggle="modal" data-target="#confirmDeleteMeetingModal" data-meeting-id="@meeting._id" data-meeting-name="Grupa @meeting.group Spotkanie : @meeting.subject">
+															<i rel="tooltip" title="Usuń spotkanie" class="glyphicon glyphicon-remove"></i>
+														</a>
+												 	</span>
+												 </td>
+											</tr>
+										}
+									</tbody>
+								</table>
+							}else{ 
+								<h4>Brak zaplanowanych wydarzeń!</h4>
+							}
 						}
-					}
+						<br>
+					</div>
 				</div>
 			</fieldset>	
 		}
@@ -428,9 +432,9 @@
 		});	
 			
 		
-		$(document).ready(function(){
+		/* $(document).ready(function(){
 		    $("[rel=tooltip]").tooltip({ placement: 'bottom'});
-		});
+		}); */
 	</script>
 }
 
