--- a/app/views/users/userDetails.scala.html
+++ b/app/views/users/userDetails.scala.html
@@ -1,76 +1,85 @@
-@(currentUser: User, role: String, userForm: Form[User])(id: String)
+@(currentUser: User, role: String, userForm: Form[User], id: String)
 @import helper._
 @import helper.twitterBootstrap._
 
 @main(currentUser, role, "Użytkownik", false){
 	<meta charset="UTF-8">
-		<div class="container col-md-offset-2 col-md-8">
+		<div class="container">
 		@helper.form(action = routes.Users.saveUser(id), 'class -> "form-inline", 'enctype -> "multipart/form-data") {
 			<fieldset>
 				<legend>
-					<div class="container">
-						<div class="row">
-					    	<div class="col-md-5"><h1>@userForm("firstName").valueOr("Nowy") @userForm("lastName").valueOr("użytkownik")</h1></div>
-					    	<div class="col-md-5">
-					    		<span class="pull-right">
-					    			<a class="btn btn-default" href="@routes.Users.getUsersList()">Powrót do listy użytkowników</a> 
-									<input type="submit" class="btn btn-primary" value="Zapisz dane użytkownika">
-					    		</span>
-					    	</div>
+					<div class="container row">
+						<div class="col-md-12">
+							<h1>@userForm("firstName").valueOr("Nowy") @userForm("lastName").valueOr("użytkownik") 
+								<span class="pull-right">
+							    	<a rel="tooltip" title="Powrót bez zapisywania" class="btn btn-warning" href="@routes.Users.getUsersList()">Powrót</a> 
+							  		<input rel="tooltip" title="Zapisz zmiany" type="submit" class="btn btn-primary" value="Zapisz">
+						  		</span> 
+						  	</h1>
 						</div>
 					</div>
 				</legend>
 					<div class="col-md-6">
-						<div class="panel panel-default">
+						<div class="container col-md-12 panel panel-default">
 							<div class="col-md-offset-1">
 								<h3>Dane użytkownika </h3>
-								@helper.inputText(userForm("firstName"), '_label -> "Imię",'size -> 40, 'type -> "text")
-								@helper.inputText(userForm("lastName"), '_label -> "Nazwisko", 'size -> 40, 'type -> "text")
-								@helper.inputText(userForm("idCardNr"), '_label -> "Numer dowodu osobistego", 'size -> 40, 'type -> "text")
-								@helper.inputText(userForm("peselNr"), '_label -> "Pesel", 'size -> 40, 'type -> "number")
-								@helper.inputText(userForm("age"), '_label -> "Wiek", 'size -> 5, 'type -> "number")
-								@helper.inputText(userForm("indexNr"), '_label -> "Numer indeksu", 'size -> 40, 'type -> "number")
-								@select(userForm("feeStatus"),
+								@helper.inputText(userForm("firstName"), '_label -> "Imię", 'size -> 40, 'type -> "text", 'class -> "form-control", 'placeholder -> "Podaj imię")
+								@helper.inputText(userForm("lastName"), '_label -> "Nazwisko", 'size -> 40, 'type -> "text", 'class -> "form-control", 'placeholder -> "Podaj nazwisko")
+								@helper.inputText(userForm("idCardNr"), '_label -> "Numer dowodu osobistego", 'size -> 40, 'type -> "text", 'class -> "form-control", 'placeholder -> "Podaj numer dowodu osobistego")
+								@helper.inputText(userForm("peselNr"), '_label -> "Pesel", 'size -> 40, 'type -> "number", 'class -> "form-control", 'placeholder -> "Podaj numer pesel")
+								@helper.inputText(userForm("age"), '_label -> "Wiek", 'size -> 5, 'type -> "number", 'class -> "form-control", 'placeholder -> "Podaj wiek")
+								@helper.inputText(userForm("indexNr"), '_label -> "Numer indeksu", 'size -> 40, 'type -> "number", 'class -> "form-control", 'placeholder -> "Podaj numer albumu")
+								@if("SuperUser".equals(role)){
+									@select(userForm("feeStatus"),
 										options("OnTime"->"Brak zaległości",
 												"Overpayed"->"Nadpłata",
 												"OnePaymentMissing"->"Brak ostatniej płatności",
 												"Blocked"->"Zaległości - blokada magazynu"),
-										'_label -> "Płatności", '_size -> 30)
+										'_label -> "Płatności", '_size -> 30,'class -> "form-control")
+								}else{
+									@select(userForm("feeStatus"),
+										options("OnTime"->"Brak zaległości",
+												"Overpayed"->"Nadpłata",
+												"OnePaymentMissing"->"Brak ostatniej płatności",
+												"Blocked"->"Zaległości - blokada magazynu"),
+										'_label -> "Płatności", '_size -> 30,'class -> "form-control", 'disabled -> "disabled")
+								}
+								<br>
 								
 							</div>
 							
 						</div>
-						<div class="panel panel-default">
+						<div class="container col-md-12 panel panel-default">
 							<div class="col-md-offset-1">
-							<h3>Dane opcjonalne :</h3>
-								
-								@helper.inputText(userForm("instructorCard"), '_label -> "Numer karty instruktora", 'size -> 40, 'type -> "text")
-										
-		          						          				
-		          				@helper.inputText(userForm("hoursPoints"), '_label -> "Przepracowane godziny", 'size -> 40, 'type -> "number")
+							<h3>Dane opcjonalne :</h3>		
+								@helper.inputText(userForm("instructorCard"), '_label -> "Numer karty instruktora", 'size -> 40, 'type -> "text", 'class -> "form-control", 'placeholder -> "Podaj numer karty instruktora")	          				
+		          				@helper.inputText(userForm("hoursPoints"), '_label -> "Przepracowane godziny", 'size -> 40, 'type -> "number", 'class -> "form-control", 'placeholder -> "Podaj ilość przepracowanych godzin")
 							</div>
+							<br>
 						</div>          				
 					</div>
 					
 					<div class="col-md-6">
-						<div class="panel panel-default">
+						<div class="container col-md-12 panel panel-default">
 							<div class="col-md-offset-1">
 								<h3>Kontakt :</h3>
-								@helper.inputText(userForm("email"), '_label -> "email", 'size -> 40, 'type -> "email")
-								@helper.inputText(userForm("phoneNr"), '_label -> "Numer telefonu", 'size -> 40, 'type -> "tel")
-								@helper.inputText(userForm("ICEphoneNr"),'_label -> "Numer telefonu ICE", 'size -> 40, 'type -> "tel")
+								@helper.inputText(userForm("email"), '_label -> "email", 'size -> 40, 'type -> "email", 'class -> "form-control", 'placeholder -> "Podaj adres e-mail")
+								@helper.inputText(userForm("phoneNr"), '_label -> "Numer telefonu", 'size -> 40, 'type -> "tel", 'class -> "form-control", 'placeholder -> "Podaj numer telefonu")
+								@helper.inputText(userForm("ICEphoneNr"),'_label -> "Numer telefonu ICE", 'size -> 40, 'type -> "tel", 'class -> "form-control", 'placeholder -> "Podaj numer awaryjny ICE")
 							</div>
+							<br>
 						</div>
-						<div class="panel panel-default">
+						<div class="container col-md-12 panel panel-default">
 							<div class="col-md-offset-1">
 								<h3>Adres :</h3>
-								@helper.inputText(userForm("address.street"), '_label -> "Ulica", 'size -> 40, 'type -> "text")
-								@helper.inputText(userForm("address.buildingNr"), '_label -> "Numer budynku", 'size -> 40, 'type -> "text")
-								@helper.inputText(userForm("address.apartmentNr"), '_label -> "Numer mieszkania", 'size -> 40, 'type -> "text")
-								@helper.inputText(userForm("address.town"), '_label -> "Miejscowość", 'size -> 40, 'type -> "text")
-								@helper.inputText(userForm("address.zipCode"), '_label -> "Kod pocztowy", 'size -> 40, 'type -> "text")
-								@helper.inputText(userForm("address.voivodeship"), '_label -> "Województwo", 'size -> 40, 'type -> "text")
+								@helper.inputText(userForm("address.street"), '_label -> "Ulica", 'size -> 40, 'type -> "text", 'class -> "form-control", 'placeholder -> "Podaj nazwę ulicy")
+								@helper.inputText(userForm("address.buildingNr"), '_label -> "Numer budynku", 'size -> 40, 'type -> "text", 'class -> "form-control", 'placeholder -> "Podaj numer budynku")
+								@helper.inputText(userForm("address.apartmentNr"), '_label -> "Numer mieszkania", 'size -> 40, 'type -> "text", 'class -> "form-control", 'placeholder -> "Podaj numer lokalu")
+								@helper.inputText(userForm("address.town"), '_label -> "Miejscowość", 'size -> 40, 'type -> "text", 'class -> "form-control", 'placeholder -> "Podaj miejscowość")
+								@helper.inputText(userForm("address.zipCode"), '_label -> "Kod pocztowy", 'size -> 40, 'type -> "text", 'class -> "form-control", 'placeholder -> "Podaj kod pocztowy")
+								@helper.inputText(userForm("address.voivodeship"), '_label -> "Województwo", 'size -> 40, 'type -> "text", 'class -> "form-control", 'placeholder -> "Podaj województwo")
 							</div>
+							<br>
 						</div>
 						<br>
 						<br>
