--- a/app/views/equipments/equipmentsList.scala.html
+++ b/app/views/equipments/equipmentsList.scala.html
@@ -57,7 +57,7 @@
 					
 					<td>
 						@if(equipment.isAvailable){
-							<a href="@routes.Equipments.makeReservation(currentUser._id)">Zarezerwuj
+							<a href="@routes.Equipments.bookEquipment(equipment._id)">Zarezerwuj
 						}
 					</td>
 					
